feat: initial i18n-aware routing

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang)
         </a>
     </li>
     <li>
-        <a href={`/${lang}/short/`}>
+        <a href={`/${lang}/insight/`}>
           {t('nav.about')}
         </a>
     </li>
