feat: insights includes tags and data #5

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,11 @@
 ---
 import LanguagePicker from "./LanguagePicker.astro";
-const platform = "github";
-const username = "withastro";
 ---
 
-<footer class="footer  p-4 bg-neutral text-neutral-content justify-items-end">
+<footer class="footer  p-4 bg-primary text-primary-content justify-items-end">
   <div class="px-5">
     <LanguagePicker />
+    jp
   </div>
 
 </footer>
