--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -4,6 +4,6 @@ import { languages } from '../i18n/ui';
 
   {Object.entries(languages).map(([lang, label]) => (
     <p>
-      <a href={`/${lang}/`}>{label}</a>
+      <a class="link" href={`/${lang}/`}>{label}</a>
     </p>
   ))}
