fix: hide unused  pages

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 const pageTitle = 'Home Page';
 ---
-
+<meta http-equiv="refresh" content="0;url=/en/insight/" />
 <BaseLayout pageTitle={pageTitle}>
 <h2>xD</h2>
 </BaseLayout>
