--- a/src/pages/pl/index.astro
+++ b/src/pages/pl/index.astro
@@ -4,5 +4,5 @@ const pageTitle = 'Home Page';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-<h2>xD</h2>
+    <meta http-equiv="refresh" content="0;url=/pl/insight" />
 </BaseLayout>
