--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,7 +7,8 @@ const t = useTranslations(lang);
 ---
 <nav class="navbar bg-base-100">
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-xl">jpalczewski blog</a>
+    <a class="btn btn-ghost normal-case text-xl"
+    href={`/${lang}/insight/`} >jpalczewski blog</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
