--- a/src/pages/[lang]/insight.astro
+++ b/src/pages/[lang]/insight.astro
@@ -13,17 +13,21 @@ export function getStaticPaths() {
     {params: {lang: 'en'}},
   ];
 }
+console.log(blogEntries);
 ---
 <BaseLayout pageTitle={pageTitle}>
 
     {blogEntries.sort((a,b) => {
-        const dateA =  parseInt(a.data.date)
-        const dateB = parseInt(b.data.date)
-        return dateB - dateA;
-      } )
-    .map(blogPostEntry => (
-       <InsightCard insight={blogPostEntry} lang={lang} />
-
-    ))}
+        //const dateA =  parseInt(a.data.date)
+        //const dateB = parseInt(b.data.date)
+        //return dateA - dateB;
+        return -1;
+        } 
+      )
+      .map(blogPostEntry => (
+       <InsightCard insight={blogPostEntry} lang={lang} />  
+      )
+    )
+    }
 
 </BaseLayout>
