feat: tag styles, post updates

--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -17,7 +17,7 @@ const hrFlag = (insight?.data.relatedInsights != undefined) || (insight?.data.re
 ---
 <article class="bg-secondary container px-4 mb-4 prose mx-auto w-full">
   <header class="mb-4 lg:mb-6">
-    <h1 class="mb-0 pb-0">
+    <h1 class="mb-0 pb-0 mt-1 pt-4">
       <a class="no-underline" href={`/${lang}/insight/${createSlug( insight.data.title)}`}>{insight.data.title}</a>
     </h1>
     <p class="mt-0 italic mb-0 pb-0">
