--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import LanguagePicker from "./LanguagePicker.astro";
 ---
 
-<footer class="footer  p-4 bg-primary text-primary-content justify-items-end">
+<footer class="footer  p-4 bg-primary text-primary-content justify-items-end container mx-auto">
   <div class="px-5">
     <LanguagePicker />
   </div>
