--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -4,6 +4,7 @@ import TagList from './TagList.astro';
 import RelatedInsight from './RelatedInsight.astro';
 import type { CollectionEntry } from 'astro:content';
 import ReferencedUrls from './ReferencedUrls.astro';
+import createInsightUrl from 'src/lib/createInsightUrl';
 interface Props {
   insight: CollectionEntry<'insight'>;
   lang: string; 
@@ -18,7 +19,7 @@ const hrFlag = (insight?.data.relatedInsights != undefined) || (insight?.data.re
 <article class="bg-secondary container px-4 mb-4 prose mx-auto w-full">
   <header class="mb-4 lg:mb-6">
     <h1 class="mb-0 pb-0 mt-1 pt-4">
-      <a class="no-underline" href={`/${lang}/insight/${createSlug( insight.data.title)}`}>{insight.data.title}</a>
+      <a class="no-underline" href={createInsightUrl(insight)}>{insight.data.title}</a>
     </h1>
     <p class="mt-0 italic mb-0 pb-0">
     Published: <time datetime={date.toISOString()}>
