--- a/src/pages/[lang]/insight/[year]/[month]/[slug].astro
+++ b/src/pages/[lang]/insight/[year]/[month]/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, type CollectionEntry } from 'astro:content';
-import createSlug from "../../../lib/createSlug";
+import createSlug from "../../../../../lib/createSlug";
 import BaseLayout from '@layouts/BaseLayout.astro';
 import InsightCard from '@components/InsightCard.astro';
 import { getLangFromUrl } from 'src/i18n/utils';
@@ -8,7 +8,8 @@ import { getLangFromUrl } from 'src/i18n/utils';
 export async function getStaticPaths() {
   const pages = await getCollection('insight')
   const paths = pages.map(page => {
-    return { params: { slug: createSlug(page.data.title), lang: page.data.language }, props: page }
+    const date = new Date(page.data.date)
+    return { params: { slug: createSlug(page.data.title), lang: page.data.language, year: date.getFullYear(), month:(date.getMonth() + 1).toString().padStart(2, "0") }, props: page }
   })
   return paths;
 }
