--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -1,17 +1,22 @@
 ---
-import { getLangFromUrl } from 'src/i18n/utils';
+import { getLangFromUrl } from "src/i18n/utils";
 interface Props {
-    tags: string[] | undefined;    
+  tags: string[] | undefined;
 }
 
-const {tags} = Astro.props;
+const { tags } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 ---
-<div class="mt-0 pt-0">
 
-{
-    tags?.map(tag => (
-        <a class="no-underline px-1 font-normal font-mono" href={`/${lang}/insight/tags/${tag}`}>#{tag}</a>
+<div class="mt-0 pt-0">
+  {
+    tags?.map((tag) => (
+      <a
+        class="no-underline px-1 font-normal font-mono"
+        href={`/${lang}/insight/tags/${tag}`}
+      >
+        #{tag}
+      </a>
     ))
-}
+  }
 </div>
