--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-const pageTitle = 'Home Page';
+const pageTitle = "Home Page";
 ---
+
 <meta http-equiv="refresh" content="0;url=/en/insight/" />
 <BaseLayout pageTitle={pageTitle}>
-<h2>xD</h2>
+  <h2>xD</h2>
 </BaseLayout>
