--- a/src/pages/pl/index.astro
+++ b/src/pages/pl/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-const pageTitle = 'Home Page';
+const pageTitle = "Home Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <meta http-equiv="refresh" content="0;url=/pl/insight" />
+  <meta http-equiv="refresh" content="0;url=/pl/insight" />
 </BaseLayout>
