--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -1,9 +1,13 @@
 ---
-import { languages } from '../i18n/ui';
+import { languages } from "../i18n/ui";
 ---
 
-  {Object.entries(languages).map(([lang, label]) => (
+{
+  Object.entries(languages).map(([lang, label]) => (
     <p>
-      <a class="link" href={`/${lang}/`}>{label}</a>
+      <a class="link" href={`/${lang}/`}>
+        {label}
+      </a>
     </p>
-  ))}
+  ))
+}
