--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,12 @@
 ---
-import '../styles/global.css';
-import { getLangFromUrl } from '../i18n/utils';
-import Navigation from '@components/Navigation.astro';
-import Footer from '@components/Footer.astro';
-const {pageTitle} = Astro.props;
+import "../styles/global.css";
+import { getLangFromUrl } from "../i18n/utils";
+import Navigation from "@components/Navigation.astro";
+import Footer from "@components/Footer.astro";
+const { pageTitle } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 ---
+
 <html lang={lang} data-theme="inba">
   <head>
     <meta charset="utf-8" />
