feat(personal): add personal index

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -19,6 +19,14 @@ const t = useTranslations(lang);
           {t("nav.insight")}
         </a>
       </li>
+      <li
+        class="tooltip tooltip-left"
+        data-tip="Personal thoughts or experiences."
+      >
+        <a href={`/${lang}/personal/`}>
+          {t("nav.personal")}
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
