feat(personal): add urls to personal posts

--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -38,5 +38,5 @@ const hrFlag =
   <Content />
   {hrFlag && <hr />}
   <RelatedInsight insight={insight} />
-  <ReferencedUrls insight={insight} />
+  <ReferencedUrls entry={insight} />
 </article>
