--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import { getLangFromUrl } from "../i18n/utils";
 import Navigation from "@components/Navigation.astro";
 import Footer from "@components/Footer.astro";
+import Umami from "@components/Umami.astro";
 const { pageTitle } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 ---
@@ -11,6 +12,7 @@ const lang = getLangFromUrl(Astro.url);
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <Umami />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
