feat: add google search verification tag

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,10 @@ const lang = getLangFromUrl(Astro.url);
     <Umami />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="google-site-verification"
+      content="eCj5eDvSvCQbudfe1BSUFP9TO89cePOHtUOMJ2l408k"
+    />
     <title>{pageTitle}</title>
   </head>
   <body>
