feat(personal): add tags feature
re #28

--- a/src/components/InsightCard.astro
+++ b/src/components/InsightCard.astro
@@ -32,7 +32,7 @@ const hrFlag =
         {date.toLocaleDateString(dateLang)}
       </time>
     </p>
-    <TagList tags={insight.data.tags} />
+    <TagList tags={insight.data.tags} type="insight" />
   </header>
 
   <Content />
