--- a/src/components/PersonalCard.astro
+++ b/src/components/PersonalCard.astro
@@ -30,8 +30,9 @@ const hrFlag = personalEntry?.data.referencedUrls != undefined;
         {personalEntry.data.date.toLocaleDateString(dateLang)}
       </time>
     </p>
-    <TagList tags={personalEntry.data.tags} />
+    <TagList tags={personalEntry.data.tags} type="personal" />
   </header>
+   lol
 
   <Content />
 
