feat(about): add about me pages and links

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,6 +27,11 @@ const t = useTranslations(lang);
           {t("nav.personal")}
         </a>
       </li>
+      <li class="tooltip tooltip-left" data-tip="About this site author.">
+        <a href={`/${lang}/about-me/`}>
+          {t("nav.about-me")}
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
