feat: mobile navbar draft

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,7 +13,24 @@ const t = useTranslations(lang);
       >jpalczewski blog</a
     >
   </div>
-  <div class="flex-none">
+
+  <div class="btn btn-ghost normal-case text-xl visible md:invisible">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="w-6 h-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M4 6h16M4 12h16M4 18h16"></path>
+    </svg>
+  </div>
+
+  <div class="flex-none invisible md:visible">
     <ul class="menu menu-horizontal px-1">
       <NavbarElement
         linkDestination={`/${lang}/about-me/`}
